--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <title>Cafe Website</title>
+    <title>Capstone Project</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
